--- a/schedule_help_pro_front_end/src/App.css
+++ b/schedule_help_pro_front_end/src/App.css
@@ -1,9 +1,11 @@
 .App {
   text-align: center;
+  padding-left: 10px;
+  font-family: Kabel, serif;
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 50vmin;
   pointer-events: none;
 }
 
@@ -14,18 +16,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: navajowhite;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
-  color: #61dafb;
+  color: purple;
 }
 
 @keyframes App-logo-spin {
