further changes to frontend

--- a/client/src/pages/ClassView.css
+++ b/client/src/pages/ClassView.css
@@ -2,6 +2,7 @@
     padding-left: 40px;
     padding-top: 40px;
     background-color: aquamarine;
+    padding-bottom: 18%;
 }
 .course h1{
     text-align: center;
