--- a/client/src/pages/ClassView.css
+++ b/client/src/pages/ClassView.css
@@ -1,7 +1,7 @@
 .course{
     padding-left: 40px;
     padding-top: 40px;
-    background-color: aquamarine;
+    background-color: b0f7dc;
     padding-bottom: 18%;
 }
 
