--- a/client/src/pages/Login.css
+++ b/client/src/pages/Login.css
@@ -2,9 +2,11 @@
     background-color: rgb(137,178,245);
 }
 .App loginbox{
+    border-radius: 5%;
     width: 320px;
     height: 450px;
-    background:rgb(137,178,245);
+    /*background:rgb(137,178,245);*/
+    background: #2de3bc;
     color: rgb(2,0,0);
     top: 50%;
     left: 50%;
