--- a/client/src/pages/Classlist.css
+++ b/client/src/pages/Classlist.css
@@ -1,5 +1,13 @@
 .Classlist h1{
-    text-align: center 
+    font-family: "Heiti SC";
+    font-size: 40px;
+    background-color: rgba(255, 255, 255, 0.2);
+    color: darkslategray;
+    width: 700px;
+    margin-left: 250px;
+    padding: 5px;
+    text-align: center;
+
 }
 
 .Classlist input{
@@ -8,15 +16,34 @@
     align-items: center;
     margin-top: 20px;
     margin-left: 10px;
-    width: 400px;
-    height: 40px;
-    font-size: 20px;
-    padding-left: 10px;
-    background-color:rgb(204,237,237)
-} 
+    width: 500px;
+    height: 50px;
+    font-size: 25px;
+    font-weight: bolder;
+    padding-left: 5px;
 
+    background-color:rgb(204,237,237);
+    font-family: "Heiti SC";
+
+    background-color: lightgrey;
+    color: midnightblue;
+} 
 .Classlist{
-    background-color: #b0f7dc;
-    padding-top: 10px;
+    background-color: rgba(255, 255, 255, 0.2);
+}
+.Classlist, body{
+    background-color: darkcyan;
+    padding-top: 5px;
+    background-image:url(
+    "https://media.istockphoto.com/photos/business-and-education-background-picture-id671101136?k=20&m=671101136&s=170667a&w=0&h=IRW440E5O4UWMO0wRHdkTaNgdO6DzD_VnEqzJ-XAl0M=");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100% 100%;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
